test_suite/tests/compile_error_cases/duplicate_attr_5.rs
const fn def() -> i32 {
    2
}

#[moq::automock]
trait Trait {
    #[moq(default = 1, default_with = "def")]
    const CONST: i32;
}

fn main() {}
